<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:tag="cards main container">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:id="@+id/tv_date"
        android:textSize="@dimen/text_medium"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="@dimen/dimen_05dp"
       />



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    android:background="@drawable/shape_drawer_bg"

    android:id="@+id/ll_outer"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"

        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/device"
            android:textSize="@dimen/text_medium"

            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/tv_device_name"
            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/landmark"
            android:textSize="@dimen/text_medium"

            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:text=":"
            android:textSize="@dimen/text_medium"

            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/colorBlack"
            android:id="@+id/tv_Location"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/installation_location"
            android:textSize="@dimen/text_medium"

            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:text=":"
            android:textSize="@dimen/text_medium"

            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/colorBlack"
            android:id="@+id/tv_landmark"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/type"
            android:textSize="@dimen/text_medium"

            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/colorBlack"
            android:id="@+id/tv_type"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/text_medium"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/tv_message"
        />

</LinearLayout>




</LinearLayout>